--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TITLE</title>
+  <title>Dential Clinic</title>
   <!-- CSS only -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+  <div class="container">
+    
+
+    <!-- MAIN MENU START  -->
+    <nav>
+      <img src="img/Logo.svg" class="logo" alt="logo">
+  
+      <a href="#"><i class="fas fa-bars"></i></a>
+  
+      <ul class="nav-links">
+        <li>
+          <a href="#">Home</a>        
+        </li>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>  
+    </nav>
+    <!-- MAIN MENU SLUT -->
 
 
+
+  </div>
 
 </body>
 </html>
