--- a/index.html
+++ b/index.html
@@ -11,11 +11,39 @@
 </head>
 <body>
 
-  <div class="container">
-    
+  <!-- TOP MENU START -->
+  <div class="top-menu">
+    <div class="container">
 
-    <!-- MAIN MENU START  -->
-    <nav>
+      <div class="work-hours">
+        <i class="far fa-clock"></i>
+        <p>Working hours: Monday - Friday: 9:00 - 18:00</p>
+      </div>
+
+      <ul class="social-media">
+        <li>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-google-plus-g"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+  <!-- TOP MENU END -->
+  
+  
+  <!-- MAIN MENU START  -->
+  <nav>
+    <div class="container">
+
       <img src="img/Logo.svg" class="logo" alt="logo">
   
       <a href="#"><i class="fas fa-bars"></i></a>
@@ -34,12 +62,13 @@
           <a href="#">Contact</a>
         </li>
       </ul>  
-    </nav>
-    <!-- MAIN MENU SLUT -->
+
+    </div>
+  </nav>
+    <!-- MAIN MENU END -->
 
 
 
-  </div>
 
 </body>
 </html>
