--- a/index.html
+++ b/index.html
@@ -21,18 +21,10 @@
       </div>
 
       <ul class="social-media">
-        <li>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-google-plus-g"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-        </li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
       </ul>
 
     </div>
@@ -49,23 +41,28 @@
       <a href="#"><i class="fas fa-bars"></i></a>
   
       <ul class="nav-links">
-        <li>
-          <a href="#">Home</a>        
-        </li>
-        <li>
-          <a href="#">About Us</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>  
 
     </div>
   </nav>
     <!-- MAIN MENU END -->
+
+  <section class="showcase">
+    <div class="container">
+      <div class="showcase-text">
+        <h1>Modern technologies <span style="display: block;"></span> ensure safety</h1>
+        <p>Our clinic is equipped with the highest quality medical and dental equipment,
+          which allows for quick and effective treatment of the patient.</p>
+          <button class="btn btn-primary">About our clinic</button>
+        </div>
+        <img class="first-person" src="img/placehold-1.svg" alt="">
+
+    </div>
+  </section>  
 
 
 
