--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   <nav>
     <div class="container">
 
-      <img src="img/Logo.svg" class="logo" alt="logo">
+      <a href="#"><img src="img/Logo.svg" class="logo" alt="logo"></a>
   
       <a href="#"><i class="fas fa-bars"></i></a>
   
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="#" class="current">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
@@ -49,20 +49,46 @@
 
     </div>
   </nav>
-    <!-- MAIN MENU END -->
+  <!-- MAIN MENU END -->
 
+
+  <!-- SHOWCASE START -->
   <section class="showcase">
     <div class="container">
+
       <div class="showcase-text">
         <h1>Modern technologies <span style="display: block;"></span> ensure safety</h1>
         <p>Our clinic is equipped with the highest quality medical and dental equipment,
           which allows for quick and effective treatment of the patient.</p>
           <button class="btn btn-primary">About our clinic</button>
         </div>
-        <img class="first-person" src="img/placehold-1.svg" alt="">
+        <img class="first-person" src="img/placehold-1.svg" alt="woman">
 
     </div>
-  </section>  
+  </section> 
+  <!-- SHOWCASE END  -->
+
+
+  <!-- ABOUT US START -->
+  <section class="about-us">
+    <div class="container">
+      <div class="aboutus-text">
+        <h2>Dential<span id="blue">Clinic</span> is a modern <span style="display: block;">medical and dental clinic</span></h2>
+        <div id="line"></div>
+        <p>The DentialClinic Center located in the city of Stockholm is one of the most modern dentistry centers in Sweden. It was created for demanding patients who expect the highest quality of services combined with comfort and a pleasant atmosphere. <span style="display: block; margin-top: 1rem;">The highest-class dental equipment possessed by the DentialClinic Center enables complicated procedures to be carried out. In our dental practice we combine passion, technology and quality. We strive to fulfill your dreams of a wonderful smile</span></p>
+        
+        
+          <ul class="numbers">
+            <li><h2>9 850</h2><h4>Happy patients</h4></li>
+            <li><h2>12 890</h2><h4>Performed treatments</h4></li>
+            <li><h2>24/7</h2><h4>Open clinic</h4></li>
+          </ul>
+      </div>
+
+      <img class="second-person" src="img/placehold-2.svg" alt="man">
+
+    </div>
+  </section>
 
 
 
